--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^8.5.3",
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
-    "otp-generator": "^4.0.1"
+    "otp-generator": "^4.0.1",
+    "zod": "^3.23.8"
   }
 }
