--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,15 @@
     "@reduxjs/toolkit": "^2.2.7",
     "aos": "^2.3.4",
     "axios": "^1.7.7",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-otp-input": "^3.1.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
+    "react-toastify": "^10.0.5",
     "react-type-animation": "^3.2.0",
     "tailwindcss": "^3.4.10"
   },
