--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ramonak/react-progress-bar": "^5.3.0",
     "@reduxjs/toolkit": "^2.2.7",
     "aos": "^2.3.4",
     "axios": "^1.7.7",
@@ -22,6 +23,7 @@
     "react-otp-input": "^3.1.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
+    "react-stars": "^2.2.5",
     "react-toastify": "^10.0.5",
     "react-type-animation": "^3.2.0",
     "tailwindcss": "^3.4.10"
