--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-stars": "^2.2.5",
+    "react-super-responsive-table": "^6.0.0",
     "react-toastify": "^10.0.5",
     "react-type-animation": "^3.2.0",
     "tailwindcss": "^3.4.10"
