--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-super-responsive-table": "^6.0.0",
     "react-toastify": "^10.0.5",
     "react-type-animation": "^3.2.0",
+    "swiper": "^11.1.14",
     "tailwindcss": "^3.4.10"
   },
   "devDependencies": {
