--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "aos": "^2.3.4",
     "axios": "^1.7.7",
+    "copy-to-clipboard": "^3.3.3",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -21,6 +22,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-otp-input": "^3.1.1",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-stars": "^2.2.5",
@@ -28,7 +30,8 @@
     "react-toastify": "^10.0.5",
     "react-type-animation": "^3.2.0",
     "swiper": "^11.1.14",
-    "tailwindcss": "^3.4.10"
+    "tailwindcss": "^3.4.10",
+    "video-react": "^0.16.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
