--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev": "concurrently -n \"frontend,backend\" -c \"bgBlue,bgYellow\" \"npm run frontend\" \"npm run backend\""
   },
   "dependencies": {
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "react-chartjs-2": "^5.2.0"
   }
 }
