--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
-VITE_BASE_URL=https://classnotion.onrender.com
+VITE_BASE_URL=https://classnotion.onrender.com/api/v1/
 VITE_BASE_RAZORPAY_KEY=rzp_test_B0Frlx4UaXu9dH
  
