--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.2",
     "@ramonak/react-progress-bar": "^5.3.0",
     "@reduxjs/toolkit": "^2.2.7",
     "aos": "^2.3.4",
     "axios": "^1.7.7",
     "chart.js": "^4.4.4",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "copy-to-clipboard": "^3.3.3",
+    "framer-motion": "^11.11.17",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
@@ -32,7 +36,9 @@
     "react-toastify": "^10.0.5",
     "react-type-animation": "^3.2.0",
     "swiper": "^11.1.14",
+    "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.4.10",
+    "tailwindcss-animate": "^1.0.7",
     "video-react": "^0.16.0"
   },
   "devDependencies": {
